@@ -156,7 +156,7 @@ public class FileLocalizer {
      * @throws IOException
      */
     public static InputStream openDFSFile(String fileName) throws IOException {
-        Configuration conf = PigMapReduce.sJobConf;
+        Configuration conf = PigMapReduce.sJobConfInternal.get();
         if (conf == null) {
             throw new RuntimeException(
                     "can't open DFS file while executing locally");
@@ -173,7 +173,7 @@ public class FileLocalizer {
     }
     
     public static long getSize(String fileName) throws IOException {
-    	Configuration conf = PigMapReduce.sJobConf;
+    	Configuration conf = PigMapReduce.sJobConfInternal.get();
 
     	if (conf == null) {
     		throw new RuntimeException(
